bookstore app completed. done operations using API

--- a/BookStoreApp/package.json
+++ b/BookStoreApp/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.2.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "metro-config": "^0.77.0",
